--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -14,3 +14,15 @@
 .color-red {
     color: red;
 }
+
+.color-green {
+    color: green;
+}
+
+.tabulator-editing input[type="text"] {
+    font-size: 14px;
+}
+
+.inline-to-control {
+    margin-top: 18px;
+}
