:fire: fixed widget label padding

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -171,7 +171,8 @@
 
 .widget .widget-label{
     padding: 15px;
-    padding-top: 7px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-size: 10pt;
 }
 
